add support for nes, snes and gba

--- a/res/layout/machine.xml
+++ b/res/layout/machine.xml
@@ -44,5 +44,17 @@
             android:layout_height="wrap_content"
             android:onClick="shutdown"
             android:text="@string/machine_shutdown"/>
+    <Button
+            android:id="@+id/b_reload_config"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="reload_config"
+            android:text="@string/machine_reload_config"/>
+    <Button
+            android:id="@+id/b_restart_config"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="restart_server"
+            android:text="@string/machine_restart_server"/>
 
 </TableLayout>
