--- a/res/layout/settings.xml
+++ b/res/layout/settings.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+
     <PreferenceCategory android:title="Android Remote Server">
         <EditTextPreference
                 android:summary="hostname or ip of remote machine"
