--- a/res/layout/emu_gba.xml
+++ b/res/layout/emu_gba.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE TableLayout>
         <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
@@ -21,18 +22,26 @@
             android:layout_height="wrap_content"
             android:onClick="pause"
             android:text="@string/emu_gba_pause" />
+    <TableRow
+            android:id="@+id/tableRow1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
     <Button
             android:id="@+id/b_savestate"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:onClick="savestate"
             android:text="@string/emu_gba_savestate" />
     <Button
             android:id="@+id/b_loadstate"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:onClick="loadstate"
             android:text="@string/emu_gba_loadstate" />
+    </TableRow>
 	<Button
             android:id="@+id/b_fullscreen"
             android:layout_width="0dp"
