--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE TableLayout>
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
@@ -54,7 +55,7 @@
             android:id="@+id/toggleButton1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="preferences"
+            android:text="Preferences"
             android:onClick="open_preferences"/>
 
 </TableLayout>
